Picocli needs the new ModuleEnableNativeAccess
(cherry picked from commit 5234b479aa071f03e61ba8644fe5fbb195e4ef85)